# algorithmic-trading

./: .gitignore  README.md  pyproject.toml  simple_demo.py
time_series/: mean_reversion.ipynb
