[tool.poetry]
name = "algorithmic-trading"
version = "0.1.0"
description = "Backtesting algorithm trading strategies"
authors = ["abc@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
yfinance = "^0.2.49"
vectorbt = "^0.26.2"
statsmodels = "^0.14.4"
kaleido = "1.0.0rc"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
